# glogg

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  AppImageBuilder.yml  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  INSTALL.macosx.md  INSTALL.win.md  Info.plist  NOTICE  README  README.md  README.textile  SECURITY.md  TODO  abstractlogdata.cpp  abstractlogdata.h  abstractlogview.cpp  abstractlogview.h  appveyor.yml  common.h  config.h.in  configuration.cpp  configuration.h  crawlerwidget.cpp  crawlerwidget.h  encodingselector.cpp  encodingselector.h  filewatcher.cpp  filteredview.cpp  filteredview.h  filtersdialog.cpp  filtersdialog.h  filtersdialog.ui  filtersdialog_old.ui  filterset.cpp  (+74 more)
.github/: FUNDING.yml
Resources/: klogg.icns
cmake/: CodeCoverage.cmake  CompilerFlags.cmake  CompilerWarnings.cmake  MacOSXBundleInfo.plist.in  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  VersionInfo.in  VersionResource.rc  generate_version_h.cmake  pandocology.cmake  prepare_version.cmake  ucm.cmake  version.cmake  version_resource.rc.in  win32_rc.cmake
doc/: documentation.asciidoc  documentation.markdown  documentation.rst
images/: glogg.icns  open.xpm
plugins/: PyDialog.py  PyDialog_ui.py  handlers.py  handlers2.py
src/: CMakeLists.txt  PyDialog.ui  QActionExtended.cpp  QActionExtended.h  drawhelpers.h  (+105 more)
src/app/: CMakeLists.txt  crashhandler.cpp  crashhandler.h  documentation.qrc.in  glogg.qrc  klogg.qrc  kloggapp.h  main.cpp  messagereceiver.h
src/externalcom/: CMakeLists.txt
src/externalcom/include/: dbuscontrol.h  dbusexternalcom.h  externalcom.h  socketexternalcom.h
src/externalcom/src/: socketexternalcom.cpp
src/filewatch/: CMakeLists.txt
src/filewatch/include/: filewatcher.h  inotifywatchtowerdriver.h  platformfilewatcher.h  qtfilewatcher.h  watchtower.h  watchtowerlist.h  winfilewatcher.h
src/filewatch/src/: filewatcher.cpp  inotifywatchtowerdriver.cpp  winfilewatcher.cpp
src/logdata/: CMakeLists.txt
src/logdata/include/data/: abstractlogdata.h  blockpool.h  compressedlinestorage.h  encodingdetector.h  filedigest.h  fileholder.h  hsregularexpression.h  linepositionarray.h  linetypes.h  loadingstatus.h  logdata.h  logdataoperation.h  logdataworker.h  logdataworkerthread.h  logfiltereddata.h  logfiltereddataworker.h  logfiltereddataworkerthread.h  marks.h  regularexpression.h  regularexpressionpattern.h  threadprivatestore.h
src/logdata/src/: abstractlogdata.cpp  blockpool.cpp  compressedlinestorage.cpp  encodingdetector.cpp  filedigest.cpp  fileholder.cpp  hsregularexpression.cpp  logdata.cpp  logdataoperation.cpp  logdataworker.cpp  logdataworkerthread.cpp  logfiltereddata.cpp  logfiltereddataworker.cpp  logfiltereddataworkerthread.cpp  marks.cpp  regularexpression.cpp
src/settings/: CMakeLists.txt
src/settings/include/: configuration.h  persistentinfo.h
src/settings/src/: configuration.cpp  persistentinfo.cpp
src/ui/: CMakeLists.txt
src/ui/include/: abstractlogview.h  crawlerwidget.h  displayfilepath.h  encodings.h  favoritefiles.h  filteredview.h  filtersdialog.h  filtersdialog.ui  filterset.h  highlightedmatch.h  highlighteredit.h  highlighteredit.ui  highlightersdialog.h  highlightersdialog.ui  highlighterset.h  highlightersetedit.h  highlightersetedit.ui  highlightersmenu.h  iconloader.h  infoline.h  logmainview.h  mainwindow.h  menuactiontooltipbehavior.h  optionsdialog.h  optionsdialog.ui  overview.h  overviewwidget.h  pathline.h  predefinedfilters.h  predefinedfilterscombobox.h  predefinedfiltersdialog.h  predefinedfiltersdialog.ui  qfnotifications.h  quickfind.h  quickfindmux.h  quickfindpattern.h  quickfindwidget.h  recentfiles.h  savedsearches.h  scratchpad.h  (+10 more)
src/ui/src/: abstractlogview.cpp  crawlerwidget.cpp  displayfilepath.cpp  favoritefiles.cpp  filteredview.cpp  filtersdialog.cpp  filterset.cpp  highlighteredit.cpp  highlightersdialog.cpp  highlighterset.cpp  highlightersetedit.cpp  iconloader.cpp  infoline.cpp  logmainview.cpp  mainwindow.cpp  menuactiontooltipbehavior.cpp  optionsdialog.cpp  overview.cpp  overviewwidget.cpp  pathline.cpp  predefinedfilters.cpp  predefinedfilterscombobox.cpp  predefinedfiltersdialog.cpp  quickfind.cpp  quickfindmux.cpp  quickfindpattern.cpp  quickfindwidget.cpp  recentfiles.cpp  savedsearches.cpp  scratchpad.cpp  selection.cpp  session.cpp  sessioninfo.cpp  signalmux.cpp  tabbedcrawlerwidget.cpp  tabbedscratchpad.cpp  tabnamemapping.cpp  versionchecker.cpp  viewtools.cpp
src/utils/: CMakeLists.txt
src/utils/include/: atomicflag.h  config.h  configuration.h  crash_tracer.h  decompressor.h  dispatch_to.h  downloader.h  fileid.h  issuereporter.h  klogg_version.h  log.h  memory_info.h  openfilehelper.h  overload_visitor.h  perfcounter.h  persistable.h  persistentinfo.h  progress.h  readablesize.h  resourcewrapper.h  styles.h  synchronization.h  utils.h  uuid.h
src/utils/src/: configuration.cpp  crash_tracer.cpp  decompressor.cpp  downloader.cpp  issuereporter.cpp  klogg_version.cpp  memory_info.cpp  persistentinfo.cpp  readablesize.cpp
src/versioncheck/: CMakeLists.txt
src/versioncheck/include/: versionchecker.h
src/versioncheck/src/: versionchecker.cpp
tests/: CMakeLists.txt  carwlerwidgettest.cpp  cmake.bat  coverage.sh  encodingspeculatorTest.cpp  file_write_helper.cpp  file_write_helper.h  filewatcherTest.cpp  itests.cpp  linepositionarrayTest.cpp  logdataPerfTest.cpp  logdataTest.cpp  logdata_test.cpp  logdata_test.h  logfiltereddataPerfTest.cpp  logfiltereddataTest.cpp  logfiltereddata_test.cpp  main.cpp  qtests_main.cpp  test-results.txt  test_utils.h  testlogdata.cpp  testlogdata.h  testlogfiltereddata.cpp  testlogfiltereddata.h  tests.pro  tests_main.cpp  testtest.cpp  watchtowerTest.cpp
tests/helpers/: CMakeLists.txt  file_write_helper.cpp  file_write_helper.h  test_utils.h
tests/ui/: CMakeLists.txt  crawlerwidget_test.cpp  logdata_test.cpp  logfiltereddata_test.cpp  mainwindow_test.cpp  qtests_main.cpp
tests/unit/: CMakeLists.txt  linepositionarray_test.cpp  patternmatcher_test.cpp  tests_main.cpp
(+148 files in other folders)
